--- a/N_ED/3/github-oauth-master/views/index.jade
+++ b/N_ED/3/github-oauth-master/views/index.jade
@@ -2,4 +2,10 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome tooooooo #{title}
+
+  if user
+    p Hello, #{user.username}
+    a(href="/logout") Logout
+  else
+    a(href="/login") Login
